--- a/apps/Objects/templates/show_items.html
+++ b/apps/Objects/templates/show_items.html
@@ -7,26 +7,27 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
 </head>
+<h1>{{Item}}</h1>
 <body>
 <div class="container">
 <table class="table table-striped">
     <thead>
       <tr>
         <th>name</th>
-		<th>price</th>
-		<th>count</th>
-		<th>rating</th>
-		<th>type</th>
+        <th>price</th>
+        <th>count</th>
+        <th>rating</th>
+        <th>type</th>
       </tr>
     </thead>
     <tbody>
-	{% for item in items %}  
+	  {% for item in Item%}  
       <tr>
-        <td>{{item.name}}</td>
-        <td>{{item.price}}</td>
-		<td>{{item.count}}</td>
-		<td>{{item.rating}}</td>
-		<td>{{item.type}}</td>
+        <td>{{item.1}}</td>
+        <td>{{item.2}}</td>
+        <td>{{item.3}}</td>
+        <td>{{item.4}}</td>
+        <td>{{item.5}}</td>
       </tr>
 	  {% endfor %} 
 	</tbody>
